--- a/frontend/shree/src/Components/card.css
+++ b/frontend/shree/src/Components/card.css
@@ -1,5 +1,6 @@
-#card{
-    border:5px solid rgb(231, 16, 16);
-    width:300px;
-    height:300px
+card{
+    height:200px;
+    width:100px;
+    border: 2px solid black;
+    border-radius: 5px;
 }
